[project]
name = "claudebar"
version = "0.2.5"
description = "Monitor Claude CLI usage for Waybar"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pexpect>=4.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
claude-usage = "claude_usage.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_usage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require Claude CLI, may be slow)",
]
